[project]
name = "bellman-grid-solver"
version = "0.1.0"
description = "Solve deterministic grid worlds/mazes using bellman equation"
authors = [
    {name = "Ashkan Feyzollahi",email = "ashkanfeyzollahi@gmail.com"}
]
readme = "README.md"
requires-python = "<3.14,>=3.11"
dependencies = [
    "mazelib (>=0.9.16,<0.10.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]

[project.scripts]
bellman-grid-solver = "bellman_grid_solver:bellman_grid_solver"

[tool.poetry]
packages = [{include = "bellman_grid_solver.py", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
